2017-07-14  Michael Catanzaro  <mcatanzaro@igalia.com>

        [CMake] Unclear distinction between WebKitHelpers and WebKitMacros
        https://bugs.webkit.org/show_bug.cgi?id=153189

        Reviewed by Antonio Gomes.

        Merge WebKitHelpers.cmake into WebKitMacros.cmake, since there is no meaningful distinction
        between the macros that belong in each file. Then, move the macros that are only needed by
        one project into project-specific CMake files. Retain here only the macros that are needed
        in multiple places.

        * Source/cmake/OptionsCommon.cmake: Update a comment.
        * Source/cmake/OptionsGTK.cmake: New location for libtool macro, exclusively needed here.
        * Source/cmake/WebKitCommon.cmake: Do not include WebKitHelpers.cmake.
        * Source/cmake/WebKitHelpers.cmake: Removed.
        * Source/cmake/WebKitMacros.cmake:

2017-07-13  Michael Catanzaro  <mcatanzaro@igalia.com>

        [GTK][WPE] Avoid setting settings that are set by default

        Unreviewed.

        * Source/cmake/OptionsGTK.cmake:
        * Source/cmake/OptionsWPE.cmake:

2017-07-13  Konstantin Tokarev  <annulen@ynadex.ru>

        Unreviewed, Windows ports should enable WebKitLegacy and disable
        WebKit.

        * Source/cmake/OptionsWin.cmake:

2017-07-13  Matthew Hanson  <matthew_hanson@apple.com>

        Fix the Mac CMake build.

        Unreviewed build fix.

        Fix the Mac CMake build after r219488 broke it. r219488 erroneously updated
        the variable name DERIVED_SOURCES_WEBKITLEGACY_DIR to DERIVED_SOURCES_WEBKIT_LEGACY_DIR
        without updating subsequent users of that variable.

        * Source/cmake/WebKitFS.cmake:
        Rename DERIVED_SOURCES_WEBKIT_LEGACY_DIR back to DERIVED_SOURCES_WEBKITLEGACY_DIR.

2017-07-13  Matthew Hanson  <matthew_hanson@apple.com>

        Fix the cMake builds (GTK and WPE.)
        https://bugs.webkit.org/show_bug.cgi?id=174164
        rdar://problem/33137595
