@@ -1,10 +1,5 @@
-cmake_minimum_required(VERSION 2.8.12)
+cmake_minimum_required(VERSION 3.3)
 project(WebKit)
-
-# This should be removed once we require CMake 3.3.
-if (POLICY CMP0058)
-    cmake_policy(SET CMP0058 NEW)
-endif ()
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/Source/cmake")
 
